--- a/GraduaatProef.html
+++ b/GraduaatProef.html
@@ -8,117 +8,293 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="full-view"></div>
-      <div class="preview-list">
-        <ul>
-          <li>
-            <input type="radio" id="tab-1" name="gallery-group" />
-            <label for="tab-1">
-              <div class="tab">
-                <img
-                  src="https://images.pexels.com/photos/1559117/pexels-photo-1559117.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                />
-              </div>
-            </label>
-            <div class="content">
-              <img
-                src="https://images.pexels.com/photos/1559117/pexels-photo-1559117.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              />
-            </div>
-          </li>
-          <li>
-            <input type="radio" id="tab-2" name="gallery-group" />
-            <label for="tab-2">
-              <div class="tab">
-                <img
-                  src="https://images.pexels.com/photos/688660/pexels-photo-688660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                />
-              </div>
-            </label>
-            <div class="content">
-              <img
-                src="https://images.pexels.com/photos/688660/pexels-photo-688660.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              />
-            </div>
-          </li>
-          <li>
-            <input type="radio" id="tab-3" name="gallery-group" />
-            <label for="tab-3">
-              <div class="tab">
-                <img
-                  src="https://images.pexels.com/photos/730256/pexels-photo-730256.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                />
-              </div>
-            </label>
-            <div class="content">
-              <img
-                src="https://images.pexels.com/photos/730256/pexels-photo-730256.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              />
-            </div>
-          </li>
-          <li>
-            <input type="radio" id="tab-4" name="gallery-group" checked />
-            <label for="tab-4">
-              <div class="tab">
-                <img
-                  src="https://images.pexels.com/photos/22427/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                />
-              </div>
-            </label>
-            <div class="content">
-              <img
-                src="https://images.pexels.com/photos/22427/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              />
-            </div>
-          </li>
-          <li>
-            <input type="radio" id="tab-5" name="gallery-group" />
-            <label for="tab-5">
-              <div class="tab">
-                <img
-                  src="https://images.pexels.com/photos/789380/pexels-photo-789380.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                />
-              </div>
-            </label>
-            <div class="content">
-              <img
-                src="https://images.pexels.com/photos/789380/pexels-photo-789380.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              />
-            </div>
-          </li>
-          <li>
-            <input type="radio" id="tab-6" name="gallery-group" />
-            <label for="tab-6">
-              <div class="tab">
-                <img
-                  src="https://images.pexels.com/photos/355411/pexels-photo-355411.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                />
-              </div>
-            </label>
-            <div class="content">
-              <img
-                src="https://images.pexels.com/photos/355411/pexels-photo-355411.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-              />
-            </div>
-          </li>
-          <li>
-            <input type="radio" id="tab-7" name="gallery-group" />
-            <label for="tab-7">
-              <div class="tab">
-                <img
-                  src="https://images.pexels.com/photos/1424246/pexels-photo-1424246.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                />
-              </div>
-            </label>
-            <div class="content">
-              <img
-                src="https://images.pexels.com/photos/1424246/pexels-photo-1424246.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              />
-            </div>
-          </li>
-        </ul>
+    <a href="index.html" style="color:rgb(255, 255, 255);">Back</a>
+    <p class="heading">Graduaat Proef</p>
+    <p>De opdracht werd in groep gemaakt door samenwerking Ali Maes, Ahmet Yimaz en Filip Rigoir.<br/> De applicatie is geprogrammeert in C# met verschillende onhafhankelijke lagen. Er wordt voor elk nieuw project binnen de
+solution gebruik gemaakt van .NET Core 5.0. We gebruiken als debuger Microsoft Visual Studio.
+De opstart van het project kent een minimale configuratie die we kort bespreken hoe het project tot stand is gekomen.
+Onderstaande acties werden systematisch uitgevoerd wanneer de app daar klaar voor was om de volgende stap in te gaan. <br/> 
+          <a href="images/gproef/doc.pdf" style="color:rgb(255, 255, 255);" target="_blank" class="btn"
+            >Download Documentatie</a>
+</p>
+    <div class="gallery-image">
+      <a href="./images/gproef/gp1.png">
+      <div class="img-box">
+          <img src="./images/gproef/gp1.png" alt=""
+        />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+      </a>
       </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp2.png">
+        <img src="./images/gproef/gp2.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp3.png">
+        <img src="./images/gproef/gp3.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp4.png">
+        <img src="./images/gproef/gp4.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp5.png">
+        <img src="./images/gproef/gp5.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp6.png">
+        <img src="./images/gproef/gp6.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+
+    <div class="gallery-image">
+      <a href="./images/gproef/gp7.png">
+      <div class="img-box">
+          <img src="./images/gproef/gp7.png" alt=""
+        />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+      </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp8.png">
+        <img src="./images/gproef/gp8.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp9.png">
+        <img src="./images/gproef/gp9.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp10.png">
+        <img src="./images/gproef/gp10.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp11.png">
+        <img src="./images/gproef/gp11.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp12.png">
+        <img src="./images/gproef/gp12.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+
+    <div class="gallery-image">
+      <a href="./images/gproef/gp13.png">
+      <div class="img-box">
+          <img src="./images/gproef/gp13.png" alt=""
+        />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+      </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp14.png">
+        <img src="./images/gproef/gp14.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp15.png">
+        <img src="./images/gproef/gp15.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp16.png">
+        <img src="./images/gproef/gp16.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp17.png">
+        <img src="./images/gproef/gp17.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp18.png">
+        <img src="./images/gproef/gp18.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+
+    <div class="gallery-image">
+      <a href="./images/gproef/gp19.png">
+      <div class="img-box">
+          <img src="./images/gproef/gp19.png" alt=""
+        />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+      </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp20.png">
+        <img src="./images/gproef/gp20.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp21.png">
+        <img src="./images/gproef/gp21.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp22.png">
+        <img src="./images/gproef/gp22.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp23.png">
+        <img src="./images/gproef/gp23.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="img-box">
+        <a href="./images/gproef/gp24.png">
+        <img src="./images/gproef/gp24.png" alt="" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Fleet management</p>
+            <p class="opacity-low">Fleet management</p>
+          </div>
+        </div>
+        </a>
+      </div>
+
+
+
     </div>
   </body>
 </html>
