--- a/index.html
+++ b/index.html
@@ -378,6 +378,24 @@
           </div>
         </div>
 
+                <div class="box">
+          <img src="./images/gproef.png" alt="" />
+          <h3>            <a
+              href="GraduaatProef.html"
+              target="_blank"
+              class="fas fa-link"
+            > Graduaat Proef</a></h3>
+          <div class="icons">
+            <a
+              href="#"
+              target="_blank"
+              class="fas fa-link"
+            ></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+          </div>
+        </div>
+
         <div class="box">
           <img src="./images/nativeimgs/thumbnail.png" alt="" />
           <h3>            <a
