other projects page

--- a/GraduaatProef.html
+++ b/GraduaatProef.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/gp.css" />
-    <title>Document</title>
+    <title>Graduaat Proef</title>
   </head>
   <body>
     <a href="index.html" style="color:rgb(255, 255, 255);">Back</a>
-    <p class="heading">Graduaat Proef</p>
+    <p class="heading">Graduaat Proef (c# ADO.NET)</p>
     <p>De opdracht werd in groep gemaakt door samenwerking Ali Maes, Ahmet Yimaz en Filip Rigoir.<br/> De applicatie is geprogrammeert in C# met verschillende onhafhankelijke lagen. Er wordt voor elk nieuw project binnen de
 solution gebruik gemaakt van .NET Core 5.0. We gebruiken als debuger Microsoft Visual Studio.
 De opstart van het project kent een minimale configuratie die we kort bespreken hoe het project tot stand is gekomen.
