--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           </div>
         </div>
 
-                <div class="box">
+        <div class="box">
           <img src="./images/gproef.png" alt="" />
           <h3>            <a
               href="GraduaatProef.html"
@@ -397,12 +397,48 @@
         </div>
 
         <div class="box">
+          <img src="./images/vvt.png" alt="" />
+          <h3>            <a
+              href="projectVVT.html"
+              target="_blank"
+              class="fas fa-link"
+            > VVT project</a></h3>
+          <div class="icons">
+            <a
+              href="#"
+              target="_blank"
+              class="fas fa-link"
+            ></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+          </div>
+        </div>
+
+        <div class="box">
           <img src="./images/nativeimgs/thumbnail.png" alt="" />
           <h3>            <a
               href="reactnative.html"
               target="_blank"
               class="fas fa-link"
             > React Native App</a></h3>
+          <div class="icons">
+            <a
+              href="#"
+              target="_blank"
+              class="fas fa-link"
+            ></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+          </div>
+        </div>
+
+                <div class="box">
+          <img src="./images/other.png" alt="" />
+          <h3>            <a
+              href="others.html"
+              target="_blank"
+              class="fas fa-link"
+            > Andere projecten</a></h3>
           <div class="icons">
             <a
               href="#"
