--- a/GraduaatProef.html
+++ b/GraduaatProef.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/gp.css" />
     <title>Graduaat Proef</title>
   </head>
-  <body>
+  <body style="background-color: hsl(194, 43%, 51%);">
     <a href="index.html" style="color:rgb(255, 255, 255);">Back</a>
     <p class="heading">Graduaat Proef (c# ADO.NET)</p>
     <p>De opdracht werd in groep gemaakt door samenwerking Ali Maes, Ahmet Yimaz en Filip Rigoir.<br/> De applicatie is geprogrammeert in C# met verschillende onhafhankelijke lagen. Er wordt voor elk nieuw project binnen de
