--- a/StageProject.html
+++ b/StageProject.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="css/gallary.css" />
     <title>Stage Project</title>
   </head>
-  <body>
+  <body style="background-color: hsl(218, 100%, 98%);">
     <ul id="navigation">
       <li><a href="index.html">Back</a></li>
     </ul>
     <h1>Stage Project</h1>
     <div>
       <h3>
-        Ik heb als stagiair op hetproject AvanadeAsset Management gewerkt. Dit
+        Ik heb als stagiair op het project Avanade Asset Management gewerkt. Dit
         project ging over het managen van assets overal in de wereld.<br />
         Waarbijde klant de status van een asset of warehouse kan managen,
         toevoegen, updaten of verwijderen.
