--- a/index.html
+++ b/index.html
@@ -396,6 +396,24 @@
           </div>
         </div>
 
+                <div class="box">
+          <img src="./images/stp.png" alt="" />
+          <h3>            <a 
+              href="stgProject.html"
+              target="_blank"
+              class="fas fa-link"
+            > Stage Project</a></h3>
+          <div class="icons">
+            <a
+              href="#"
+              target="_blank"
+              class="fas fa-link"
+            ></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+          </div>
+        </div>
+
         <div class="box">
           <img src="./images/vvt.png" alt="" />
           <h3>            <a
