--- a/others.html
+++ b/others.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/gp.css" />
     <title>Andere Projecten c#</title>
   </head>
-  <body>
+  <body style="background-color: hsl(54, 43%, 51%);">
     <a href="index.html" style="color:rgb(255, 255, 255);">Back</a>
     <p class="heading">API en AsyncProjecten (c# ADO.NET, Entity Framework, Async)</p>
     <p>1. EscapeFromTheWoods :> AsyncProgrammeren waar apen uit de bos zo snel mogelijk weg lopen. 
