--- a/projectVVT.html
+++ b/projectVVT.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/gp.css" />
     <title>Verkoop Project c#</title>
   </head>
-  <body>
+  <body style="background-color: hsl(207, 43%, 51%);">
     <a href="index.html" style="color:rgb(255, 255, 255);">Back</a>
     <p class="heading">Verkoop VoetbalTruitje (c# ADO.NET)</p>
     <p>Er werd gevraagd om een desktop applicatie te ontwikkelen die ons moest helpen om voetbaltruitjes te verkopen. 
