--- a/reactnative.html
+++ b/reactnative.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/nativegallary.css" />
     <title>Stage Project</title>
   </head>
-  <body>
+  <body style="background-color: hsl(135, 43%, 51%);">
     <div>
       <h3><a href="index.html">Back</a></h3>
       <br />
